[package]
name = "tuning_trouble"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "bench_tuning_trouble"
harness = false

[dependencies]
itertools = "0.10.5"
