[package]
name = "proboscidea_volcanium"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "bench_proboscidea_volcanium"
harness = false

[dependencies]
rustc-hash = "1.1.0"
