[package]
name = "if_you_give_a_seed_a_fertilizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "bench_if_you_give_a_seed_a_fertilizer"
harness = false

[dependencies]
